# ROS2_Chat_Interface

./: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/chat_service/lib/chat_service/: chat_service_node
ros_ws/install/chat_service/share/chat_service/: package.bash  package.sh  package.xml
ros_ws/install/interfaces/include/interfaces/interfaces/srv/: chat.hpp
ros_ws/install/interfaces/include/interfaces/interfaces/srv/detail/: chat__functions.h  chat__rosidl_typesupport_introspection_c.h  chat__struct.hpp  chat__traits.hpp  chat__type_support.c  chat__type_support.cpp
ros_ws/install/interfaces/local/lib/python3.10/dist-packages/interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
ros_ws/install/interfaces/share/ament_index/resource_index/parent_prefix_path/: interfaces
ros_ws/install/interfaces/share/interfaces/: local_setup.sh  package.sh
ros_ws/install/interfaces/share/interfaces/srv/: Chat.idl
ros_ws/src/chat_service/: package.xml  setup.cfg  setup.py
ros_ws/src/chat_service/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/chat_service/install/chat_service/lib/chat_service/: chat_service_node
ros_ws/src/chat_service/install/chat_service/share/chat_service/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/src/chat_service/install/chat_service/share/chat_service/srv/: Chat.srv
ros_ws/src/interfaces/: CMakeLists.txt  package.xml
webapp/: app.py
webapp/static/: app.js  styles.css
webapp/templates/: index.html
(+4 files in other folders)
