<?xml version="1.0"?>
<package format="3">
  <name>chat_service</name>
  <version>0.0.1</version>
  <description>ROS 2 Chat Service Node interfacing with OpenAI ChatGPT</description>
  <maintainer email="fyier@example.com">fyier</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>rosidl_default_generators</depend>

  <!-- Test dependencies -->
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
